<resources>
    <string name="app_name">"My App Portfolio "</string>

    <string name="header">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer"> Spotify Streamer App </string>
    <string name="scores_app"> Scores App </string>
    <string name="library_app"> Library App </string>
    <string name="build_it_bigger"> Build It Bigger </string>
    <string name="xyz_reader"> XYZ Reader </string>
    <string name="capstone_my_own_app"> Capstone: My Own App </string>
    <string name="open_app">This button will launch my </string>
</resources>
