<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/header" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:textSize="@dimen/abc_text_size_large_material" />

    <Button
        android:layout_width="255dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/spotify_streamer_button"
        android:onClick="sendMessage"
        android:background="#F08C35"
        android:textSize="20dp" />

    <Button
        android:layout_width="255dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/scores_app_button"
        android:onClick="sendMessage"
        android:background="#F08C35"
        android:textSize="20dp" />

    <Button
        android:layout_width="255dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/library_app_button"
        android:onClick="sendMessage"
        android:background="#F08C35"
        android:textSize="20dp" />

    <Button
        android:layout_width="255dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger_button"
        android:onClick="sendMessage"
        android:background="#F08C35"
        android:textSize="20dp" />

    <Button
        android:layout_width="255dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/xyz_reader_button"
        android:onClick="sendMessage"
        android:background="#F08C35"
        android:textSize="20dp" />

    <Button
        android:layout_width="255dp"
        android:layout_margin="10dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/capstone_button"
        android:onClick="sendMessage"
        android:background="#ffff0c1c"
        android:textSize="20dp" />


</LinearLayout>
